[package]
name = "cuneos-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = ["full", "macros"] }
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
ecdsa = { version = "0.16", features = ["der"] }
p256 = "0.13"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
merkletree = "0.23"
igd = "0.12"
rcgen = "0.11"
if-addrs = "0.10"
yasna = "0.5"
typenum = "1.16"
generic-array = "0.14.7"

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
tokio = { version = "1.44", features = ["test-util"] }